--- a/card/index.html
+++ b/card/index.html
@@ -44,12 +44,21 @@
         </div>
         <div id="container"></div>
         <div id="modal">
-            <div id="content">
+            <div class="content">
                 <name></name>
-                <span>中</span>
-                <div id="cn"></div>
-                <span>日</span>
-                <div id="jp"></div>
+                <lang>中</lang>
+                <cn></cn>
+                <lang>日</lang>
+                <jp></jp>
+            </div>
+        </div>
+        <div id="modal2">
+            <div class="content">
+                <name></name>
+                <lang>中</lang>
+                <cn></cn>
+                <lang>日</lang>
+                <jp></jp>
             </div>
         </div>
         <div id="load">
