--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
     </head>
     <body>
         <a href="./card">卡牌</a>
+        <div id="footer">Game assets are property of Iwplay World Interactive Entertainment Technology Co., Ltd.</div>
     </body>
 </html>
